--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,18 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>2.1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>1.10.2</version>
+        </dependency>
+
 
     </dependencies>
 
